...
    
    var body: some View {
        List (store.hosts.indices) { idx in
            HostSummaryView(host: self.$store.hosts [idx])
        }
        .listStyle(GroupedListStyle())
        .navigationBarTitle("Hosts")
        .navigationBarItems(trailing: HStack {
            Button (action: {}) {
                Image (systemName: "square.and.pencil")
            }.padding ()
            Button (action: {
                self.hostEdit = true
...
