...
                HStack (alignment: .center, spacing: 20) {
                    Button ("Cancel", role: .cancel) { cancelCallback () }
                        .buttonStyle(.bordered)
                        .controlSize(.large)
                        .tint(Color.red)

                    Button ("Yes", role: .none) { okCallback ()}
                        .keyboardShortcut(.defaultAction)
                        .buttonStyle(.bordered)
                        .controlSize(.large)
                }
            }
            .padding()
...
